feat: dev build command
