# docs/swagger.json
@@ -112,6 +112,35 @@
                 }
             }
         },
+        "/api/v1/dev/build": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ui",
+                    "dev",
+                    "druid",
+                    "daemon"
+                ],
+                "summary": "Build the UI in development mode",
+                "operationId": "buildDev",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "412": {
+                        "description": "Precondition Failed"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/v1/dev/disable": {
             "post": {
                 "consumes": [
@@ -158,6 +187,7 @@
                     "druid",
                     "daemon"
                 ],
+                "summary": "Enable development mode",
                 "operationId": "enableDev",
                 "parameters": [
                     {
@@ -1113,7 +1143,13 @@
         "handler.DevModeBody": {
             "type": "object",
             "properties": {
-                "commands": {
+                "buildCommands": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/CommandInstructionSet"
+                    }
+                },
+                "hotReloadCommands": {
                     "type": "object",
                     "additionalProperties": {
                         "$ref": "#/definitions/CommandInstructionSet"
